k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fusion-platform
  namespace: fusion-preprod
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: fusion-api
                port:
                  number: 8080

          - path: /
            pathType: Prefix
            backend:
              service:
                name: fusion-frontend
                port:
                  number: 80
